working on fixing the boxes for the portfolio

--- a/index.html
+++ b/index.html
@@ -90,38 +90,38 @@
 				<!-- <div class="photoshop" data-icon="100%"></div> -->
 			</div>
 			<!-- <div class="meter">
-				<h2>Illustrator</h2>
-				<!-- <div class="illustrator" data-icon="90%"></div> -->
-			</div> -->
-		</aside>
-		<aside class="experience tab-content" id="experience">
-			<div class="row">
-				<img src="images/montage.png"></img>
-					<div class="brief">
-						<span class"company-name">Montage Marketing Group</span>
-						<span class"position">Marketing Consultant</span>
-					</div>
-				</div>
-				</div>
+			<h2>Illustrator</h2>
+			<!-- <div class="illustrator" data-icon="90%"></div> -->
+		</div> -->
+	</aside>
+	<aside class="experience tab-content" id="experience">
+		<div class="row">
+			<img src="images/montage.png"></img>
+			<div class="brief">
+				<span class"company-name">Montage Marketing Group</span>
+				<span class"position">Marketing Consultant</span>
 			</div>
-				<div class="row">
-				<img src="images/geico-logo.jpg"></img>
-				<div class="brief">
-					<span class"company-name">GEICO</span>
-					<span class"position">Marketing Buyer</span>
-				</div>
-				</div>
-				</div>
-				</div>
-				<div class="row">
-				<img src="images/summitlogo.jpg"></img>
-				<div class="brief">
-					<span class"company-name">Summit Marketing</span>
-					<span class"position">Program Accounts Manager</span>
-				</div>
-				</div>
-			</div>
+		</div>
 	</div>
+</div>
+<div class="row">
+	<img src="images/geico-logo.jpg"></img>
+	<div class="brief">
+		<span class"company-name">GEICO</span>
+		<span class"position">Marketing Buyer</span>
+	</div>
+</div>
+</div>
+</div>
+<div class="row">
+	<img src="images/summitlogo.jpg"></img>
+	<div class="brief">
+		<span class"company-name">Summit Marketing</span>
+		<span class"position">Program Accounts Manager</span>
+	</div>
+</div>
+</div>
+</div>
 </aside>
 </section>
 <section id="portfolio">
@@ -151,13 +151,13 @@
 	<div class="holder">
 		<div class="title scrollflow -slide-top -opacity"><h2>Portfolio</h2></div>
 		<div id='app-container'>
-			<!-- <div class="toggles">
+			<div class="toggles">
 				<button class='button fade-in four' id='showall'>Show All</button>
 				<button class='button fade-in four' id='web'>Web Development</button>
 				<button class='button fade-in four' id='marketing'>Marketing</button>
 				<button class='button fade-in four' id='graphic'>Graphic Design</button>
 				<button class='button fade-in four' id='social'>Social Media</button>
-			</div> -->
+			</div>
 
 			<div id='app-picturebox'>
 				<div class='gallery_containers'>
@@ -166,121 +166,121 @@
 							<img src="http://i.imgur.com/0JgJmIjh.png" alt="Trivia Night Game">
 							<div class='app-pictureinfo' id='app-pictureinfo1' onclick=''>Trivia Night</div>
 						</div>
-						<div class='app-picturedet' id='app-picturedet1' onclick=''>
+						<div class='app-picturedet1' id='app-picturedet1' onclick=''>
 
-								<button class='fade-in four'><a href="https://github.com/LaFrish/Trivia_Night">Github</a></button>
-								<button class='fade-in four'><a href="http://lafrish.github.io/Trivia_Night/">Link to Trivia</a></button>
-							</div>
-						</div>
-						<div class='marketing gallery_container'>
-							<div class='app-picture' id='app-picture2' onclick=''>
-								<img src="http://i.imgur.com/pT8gS04h.png" alt="Cheerie App">
-								<div class='app-pictureinfo' id='app-pictureinfo2' onclick=''>Cheerie</div>
-							</div>
-							<div class='app-picturedet' id='app-picturedet2' onclick=''>
-								<h3>An app to cheer you up</h3>
-								<button class='fade-in four'><a href="https://github.com/LaFrish/Trivia_Night">Github</a></button>
-								<button class='fade-in four'><a href="http://cheerie.herokuapp.com/">Link to Cheerie</a></button>
-							</div>
-						</div>
-						<div class= 'social gallery_container'>
-							<div id='app-picturebox'>
-								<div class='app-picture' id='app-picture3'>
-									<img src="http://i.imgur.com/c4aHeqdh.jpg" alt="iCare App">
-									<div class='app-pictureinfo' id='app-pictureinfo3' onclick=''>iCare</div>
-								</div>
-								<div class='app-picturedet' id='app-picturedet3' onclick=''>
-									<h3> Group project</h3>
-									<button class='fade-in four'><a href="https://github.com/aklein916/iCare-Volunteer-Project">Github</a></button>
-									<button class='fade-in four'><a href="https://icare-volunteer-app.herokuapp.com/">Link to iCare</a></button>
-								</div>
-							</div>
-							<div class='graphic gallery_container'>
-								<div class='app-picture' id='app-picture4'>
-
-									<img src="http://i.imgur.com/hqWOJhwh.png" alt="Node Beach House">
-									<div class='app-pictureinfo' id='app-pictureinfo4' onclick=''>Node House</div>
-								</div>
-								<div class='app-picturedet' id='app-picturedet4' onclick=''>
-									<h3>A MEAN APP</h3>
-								</br>
-									<button class='fade-in four'><a href="https://github.com/LaFrish/beachhouse">Github</a></button>
-									<button class='fade-in four'><a href="">Link to Node House</a></button>
-								</div>
-							</div>
-							<!-- <div class='graphic gallery_container'>
-								<div class='app-picture' id='app-picture5'>
-
-									<img src="images/1167.png" alt="WDI8 Yearbook">
-									<div class='app-pictureinfo' id='app-pictureinfo5' onclick=''>WDI8 Yearbook</div>
-								</div>
-								<div class='app-picturedet' id='app-picturedet5' onclick=''>
-									<h3>WORDS</h3> WORDS .
-									<br><h3>WORDS</h3> WORDS?
-									<button class='button fade-in four'><a href="https://github.com/LaFrish/wdi8-yearbook">Github</a></button>
-									<button class='button fade-in four'><a href="wdi8-yearbook.herokuapp.com">Link to Yearbook</a></button>
-								</div>
-							</div> -->
-							<!-- <div class='graphic gallery_container'>
-								<div class='app-picture' id='app-picture6'>
-
-									<img src="images/1167.png" alt="">
-									<div class='app-pictureinfo' id='app-pictureinfo6' onclick=''></div>
-								</div>
-								<div class='app-picturedet' id='app-picturedet6' onclick=''>
-									<h3>WORDS</h3> WORDS .
-									<br><h3>WORDS</h3> WORDS?
-									<button class='button fade-in four'><a href="">Github</a></button>
-									<button class='button fade-in four'><a href="">Link to </a></button>
-								</div>
-							</div> -->
-							<div class='clearfix'></div>
+							<button class='fade-in four'><a href="https://github.com/LaFrish/Trivia_Night">Github</a></button>
+							<button class='fade-in four'><a href="http://lafrish.github.io/Trivia_Night/">Link to Trivia</a></button>
 						</div>
 					</div>
+					<div class='marketing gallery_container'>
+						<div class='app-picture' id='app-picture2' onclick=''>
+							<img src="http://i.imgur.com/pT8gS04h.png" alt="Cheerie App">
+							<div class='app-pictureinfo' id='app-pictureinfo2' onclick=''>Cheerie</div>
+						</div>
+						<div class='app-picturedet2' id='app-picturedet2' onclick=''>
+							<h3>An app to cheer you up</h3>
+							<button class='fade-in four'><a href="https://github.com/LaFrish/Trivia_Night">Github</a></button>
+							<button class='fade-in four'><a href="http://cheerie.herokuapp.com/">Link to Cheerie</a></button>
+						</div>
+					</div>
+					<div class= 'social gallery_container'>
+						<div id='app-picturebox'>
+							<div class='app-picture' id='app-picture3'>
+								<img src="http://i.imgur.com/c4aHeqdh.jpg" alt="iCare App">
+								<div class='app-pictureinfo' id='app-pictureinfo3' onclick=''>iCare</div>
+							</div>
+							<div class='app-picturedet3' id='app-picturedet3' onclick=''>
+								<h3> Group project</h3>
+								<button class='fade-in four'><a href="https://github.com/aklein916/iCare-Volunteer-Project">Github</a></button>
+								<button class='fade-in four'><a href="https://icare-volunteer-app.herokuapp.com/">Link to iCare</a></button>
+							</div>
+						</div>
+						<div class='graphic gallery_container'>
+							<div class='app-picture' id='app-picture4'>
+
+								<img src="http://i.imgur.com/hqWOJhwh.png" alt="Node Beach House">
+								<div class='app-pictureinfo' id='app-pictureinfo4' onclick=''>Node House</div>
+							</div>
+							<div class='app-picturedet4' id='app-picturedet4' onclick=''>
+								<h3>A MEAN APP</h3>
+							</br>
+							<button class='fade-in four'><a href="https://github.com/LaFrish/beachhouse">Github</a></button>
+							<button class='fade-in four'><a href="">Link to Node House</a></button>
+						</div>
+					</div>
+					<div class='graphic gallery_container'>
+						<div class='app-picture' id='app-picture5'>
+
+							<img src="images/1167.png" alt="WDI8 Yearbook">
+							<div class='app-pictureinfo' id='app-pictureinfo5' onclick=''>WDI8 Yearbook</div>
+						</div>
+						<div class='app-picturedet5' id='app-picturedet5' onclick=''>
+							<h3>WORDS</h3> WORDS .
+							<br><h3>WORDS</h3> WORDS?
+							<button class='button fade-in four'><a href="https://github.com/LaFrish/wdi8-yearbook">Github</a></button>
+							<button class='button fade-in four'><a href="wdi8-yearbook.herokuapp.com">Link to Yearbook</a></button>
+						</div>
+					</div>
+					<div class='graphic gallery_container'>
+						<div class='app-picture' id='app-picture6'>
+
+							<img src="images/1167.png" alt="">
+							<div class='app-pictureinfo' id='app-pictureinfo6' onclick=''></div>
+						</div>
+						<div class='app-picturedet6' id='app-picturedet6' onclick=''>
+							<h3>WORDS</h3> WORDS .
+							<br><h3>WORDS</h3> WORDS?
+							<button class='button fade-in four'><a href="">Github</a></button>
+							<button class='button fade-in four'><a href="">Link to </a></button>
+						</div>
+					</div>
+					<div class='clearfix'></div>
 				</div>
 			</div>
+		</div>
+	</div>
 
-		</section>
+</section>
 
 
 
 
 
-		<!-- links to projects
-		<a href="http://lafrish.github.io/Trivia_Night/"><img src="http://i.imgur.com/0JgJmIjh.png" alt="Trivia Night Game"></a>
-		<a href="http://cheerie.herokuapp.com/"><img src="http://i.imgur.com/pT8gS04h.png" alt="Cheerie App"></a>
-		<a href="https://icare-volunteer-app.herokuapp.com/"><img src="http://i.imgur.com/c4aHeqdh.jpg" alt="iCare App"></a>
-		<a href=""><img src="http://i.imgur.com/hqWOJhwh.png" alt="Node Beach House"></a>
+<!-- links to projects
+<a href="http://lafrish.github.io/Trivia_Night/"><img src="http://i.imgur.com/0JgJmIjh.png" alt="Trivia Night Game"></a>
+<a href="http://cheerie.herokuapp.com/"><img src="http://i.imgur.com/pT8gS04h.png" alt="Cheerie App"></a>
+<a href="https://icare-volunteer-app.herokuapp.com/"><img src="http://i.imgur.com/c4aHeqdh.jpg" alt="iCare App"></a>
+<a href=""><img src="http://i.imgur.com/hqWOJhwh.png" alt="Node Beach House"></a>
 <a href="https://wdi8-yearbook.herokuapp.com/"><img src="http://www.educationpost.com.hk/sites/default/files/images/logo/institution/1ga_logo.jpg" alt="General Assembly's WDI 8 Yearbook"></a> -->
 
 
-		<section id="contactMe">
-			<div class="holder">
-				<div class="title scrollflow -slide-top -opacity"><h2>Contact Me</h2></div>
-				<div class="contact-info">
-					<div class="mail"><a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com"><i class="fa fa-envelope"></i> farishta.haider@gmail.com</a></div>
-					<div class="tel"><i class="fa fa-mobile"></i> <strong> 301 - 509 - 2483</strong></div>
-				</div>
-				<div class="social">
-					<a href="https://www.behance.net/LaFrish" target="_blank"><i class="fa fa-behance"></i></a>
-					<a href="https://github.com/LaFrish" target="_blank"><i class="fa fa-github"></i>
-					</a>
-					<a href="https://www.linkedin.com/in/farishtahaider" target="_blank"><i class="fa fa-linkedin"></i></a>
-					<a href="https://www.facebook.com/farishta.haider" target="_blank"><i class="fa fa-facebook"></i></a>
-					<a href="https://twitter.com/lafrish" target="_blank"><i class="fa fa-twitter"></i></a>
-					<a href="https://plus.google.com/u/0/115133210735023070083/posts" target="_blank"><i class="fa fa-google-plus"></i></a>
-				</div>
-				<a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com" class="button">Get in touch</a>
-				<div class="copy">© Copyright 2016 Farishta Haider Portfolio</div>
-			</div>
-		</section>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
-		<script type="text/javascript" src="javascripts/script.js"></script>
-		<script type="text/javascript" src="javascripts/html5shiv-printshiv.js"></script>
-		<script type="text/javascript" src="javascripts/jquery.js"></script>
-		<script type="text/javascript" src="javascripts/jquery.scrollflow.min.js"></script>
-		<script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
-		<script type="text/javascript" src="javascripts/jquery.bxslider.min.js"></script>
-	</body>
-	</html>
+<section id="contactMe">
+	<div class="holder">
+		<div class="title scrollflow -slide-top -opacity"><h2>Contact Me</h2></div>
+		<div class="contact-info">
+			<div class="mail"><a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com"><i class="fa fa-envelope"></i> farishta.haider@gmail.com</a></div>
+			<div class="tel"><i class="fa fa-mobile"></i> <strong> 301 - 509 - 2483</strong></div>
+		</div>
+		<div class="social">
+			<a href="https://www.behance.net/LaFrish" target="_blank"><i class="fa fa-behance"></i></a>
+			<a href="https://github.com/LaFrish" target="_blank"><i class="fa fa-github"></i>
+			</a>
+			<a href="https://www.linkedin.com/in/farishtahaider" target="_blank"><i class="fa fa-linkedin"></i></a>
+			<a href="https://www.facebook.com/farishta.haider" target="_blank"><i class="fa fa-facebook"></i></a>
+			<a href="https://twitter.com/lafrish" target="_blank"><i class="fa fa-twitter"></i></a>
+			<a href="https://plus.google.com/u/0/115133210735023070083/posts" target="_blank"><i class="fa fa-google-plus"></i></a>
+		</div>
+		<a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com" class="button">Get in touch</a>
+		<div class="copy">© Copyright 2016 Farishta Haider Portfolio</div>
+	</div>
+</section>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
+<script type="text/javascript" src="javascripts/script.js"></script>
+<script type="text/javascript" src="javascripts/html5shiv-printshiv.js"></script>
+<script type="text/javascript" src="javascripts/jquery.js"></script>
+<script type="text/javascript" src="javascripts/jquery.scrollflow.min.js"></script>
+<script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="javascripts/jquery.bxslider.min.js"></script>
+</body>
+</html>
