adding skills buttons

--- a/index.html
+++ b/index.html
@@ -24,102 +24,62 @@
 					<div class="holder">
 						<a href="#welcome">Home</a>
 						<a href="#about">About Me</a>
-						<a href="#resume">Resume</a>
-						<a href="#portfolio">Portfolio</a>
+						<a href="#portfolio">Skills</a>
+						<a href="#resume">Portfolio</a>
 						<a href="#contactMe">Contact Me</a>
 					</div>
-					</div>
-				</nav>
-				<div class="nav-bar">
-					<div class="toggle-bar"></div>
 				</div>
-			</div>
-		</header>
-		<div class="welcome">
-			<i class="logo fade-in one"></i>
-			<h1 class="fade-in two">Hello <strong>World</strong></h1>
-			<p class="fade-in three" "text"><strong>I am </strong>Farishta Haider & I love
-				<span class="rw-words rw-words-1"> <span>tech.</span>
-				<span>web development.</span>
-				<span>pop culture.</span>
-				<span>marketing.</span>
-				<span>social media.</span>
-				<span>PASSIONATE.</span>
-			</span></p>
-			<p><a href="#portfolio" class="button fade-in four">Welcome to me</a></p>
-			<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
+			</nav>
+			<div class="nav-bar">
+				<div class="toggle-bar"></div>
 			</div>
 		</div>
-	</section>
-	<section id="about">
-		<div class="bg-image"></div>
-		<div class="holder">
-			<div class="title scrollflow -slide-top -opacity">
-				<h2>About</h2>
-			</div>
-			<div class="tabs-container">
-				<ul class="tabs-menu title scrollflow -slide-top -opacity">
-					<li class="current"><a href="#bio">About Me</a></li>
-					<li><a href="#skills">Skills</a></li>
-					<li><a href="#experience">Experience</a></li>
-				</ul>
-				<div class="tab">
-					<aside class="bio tab-content scrollflow -slide-right -opacity" id="bio" >
-						<p>I'm Farishta Haider <strong>Full-Stack Developer</strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
-
-						<div class="links scrollflow"><a href="resume" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
-							<a href="mailto:farishta.haider@gmail.com" class="button">
-								<i class="fa fa-paper-plane"></i>
-								Hire Me
-							</a>
-						</div>
-						<div class="headerimg"></div>
-					</aside>
-				</div>
-			</div>
+	</header>
+	<div class="welcome">
+		<i class="logo fade-in one"></i>
+		<h1 class="fade-in two">Hello <strong>World</strong></h1>
+		<p class="fade-in three" "text"><strong>I am </strong>Farishta Haider & I love
+			<span class="rw-words rw-words-1"> <span>tech.</span>
+			<span>web development.</span>
+			<span>pop culture.</span>
+			<span>marketing.</span>
+			<span>social media.</span>
+			<span>PASSIONATE.</span>
+		</span></p>
+		<p><a href="#portfolio" class="button fade-in four">Welcome to me</a></p>
+		<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
 		</div>
-
-<!-- SKILLS -->
-
-
-			<aside class="skills tab-content" id="skills">
-				<div class="holder">
-					<ul class="grid">
-
-<li><i class="devicon-atom-original"></i></li>
-<li><i class="devicon-heroku-original"></i></li>
-<li><i class="devicon-github-original"></i></li>
-<li><i class="devicon-git-plain"></i></li>
-<li><i class="devicon-html5-plain"></i></li>
-<li><i class="devicon-illustrator-plain"></i></li>
-<li><i class="devicon-jquery-plain"></i></li>
-<li><i class="devicon-mysql-plain"></i></li>
-<li><i class="devicon-photoshop-plain"></i></li>
-<li><i class="devicon-postgresql-plain"></i></li>
-<li><i class="devicon-python-plain"></i></li>
-<li><i class="devicon-sass-original"></i></li>
-<li><i class="devicon-sass-plain"></i></li>
-<li><i class="devicon-wordpress-plain"></i></li>
-
- <h2>HTML/CSS</h2>
- <li><i class="bitIcon-css"></i></li>
- <li><i class="bitIcon-html"></i></li>
-				<li><h2>Javascript</h2>
-					<i class="devicon-javascript-plain"></i></li>
-				<li><h2>Ruby</h2><i class="devicon-ruby-plain"></i></li>
-				<li><h2>Ruby on Rails</h2><i class="devicon-rails-plain"></i></li>
-				<li><h2>AngularJS</h2><i class="devicon-angularjs-plain"></i></li>
-				<li><h2>NodeJS</h2><i class=""></i></li>
-				<li><h2>MongoDB</h2><i class="devicon-mongodb-plain"></i></li>
-				<li><h2>ExpressJS</h2><i class=""></i></li>
-				<li><h2>NodeJS</h2><i class="devicon-nodejs-plain"></i></li>
-				<li><h2>Marketing</h2><i class=""></i></li>
-				<li><h2>Photoshops</h2><i class="devicon-photoshop-line"></i></li>
-				<li><h2>Illustrator</h2><i class="devicon-illustrator-line"></i></li>
+	</div>
+</section>
+<section id="about">
+	<div class="bg-image"></div>
+	<div class="holder">
+		<div class="title scrollflow -slide-top -opacity">
+			<h2>About</h2>
+		</div>
+		<div class="tabs-container">
+			<ul class="tabs-menu title scrollflow -slide-top -opacity">
+				<li class="current"><a href="#bio">About Me</a></li>
+				<li><a href="#experience">Experience</a></li>
+				<li><a href="#testimonials">Testimonials</a></li>
 			</ul>
+			<div class="tab">
+				<aside class="bio tab-content scrollflow -slide-right -opacity" id="bio" >
+					<p>I'm Farishta Haider <strong>Full-Stack Developer</strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
+
+					<div class="links scrollflow"><a href="resume" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
+						<a href="mailto:farishta.haider@gmail.com" class="button">
+							<i class="fa fa-paper-plane"></i>
+							Hire Me
+						</a>
+					</div>
+					<div class="headerimg"></div>
+				</aside>
 			</div>
 		</div>
-	</aside>
+	</div>
+
+
 	<!-- EXPERIENCE -->
 	<aside class="experience tab-content" id="experience">
 		<div class="row">
@@ -150,70 +110,111 @@
 </div>
 </div>
 </aside>
+
 </section>
+<!-- SKILLS -->
+<!-- <aside class="skills tab-content" id="skills">
+</aside> -->
 <section id="portfolio">
-<aside class="skillgallery">
-	<div class="wrapper">
-		<h2>Skills</h2>
-<div class="skillItem">
+	<aside class="skillgallery">
+		<div class="wrapper">
+			<h2>Skills</h2>
+			<div class="skillItem">
 
-
-<i class="devicon-sass-plain"></i>
-<div class="fakeImage red">
-	 <i class="bitIcon-html"></i>
-</div>
-
-
-
-<div class="skillOverlay">
-	<h2 class="skillItemTitel">HTML</h2>
-	<p class="">Authoritatively develop front-end e-business with top-line mindshare. Progressively predominate 2.0.</p>
-</div>
-</div>
-<div class="skillItem">
-
-<div class="fakeImage blue">
-	<i class="bitIcon-css"></i>
-</div>
-<div class="skillOverlay">
-	<h2 class="skillItemTitel">CSS</h2>
-	<p class="skillItemIntro"></p>
-</div>
-</div>
-<div class="skillItem">
-
-<div class="fakeImage green">
-	jQuery
-</div>
-<div class="skillOverlay">
-	<h2 class="skillItemTitel">jQuery</h2>
-	<p class="skillItemIntro">.</p>
-</div>
-</div>
-<div class="clear"></div>
-</div>
-
-</aside>
-</section>
-	<!-- <div class="holder">
-		<div id="to-work"></div>
-		<div class="title scrollflow -slide-top -opacity">
-			<h2>Resume</h2>
-		</div>
-		<div id="trivia" class="work_item">
-			<div class="slide_container">
-				<div class="portfolio_description">
-					<h3> Project 1 - Trivia Night </h3>
-					<div class="close_work"><div></div></div>
-					<div class="prev_work" id="trivia_prev"><div></div></div>
-					<div class="next_work" id="trivia_next"><div></div></div>
+				<i class="devicon-sass-plain"></i>
+				<div class="fakeImage html">
+					<i class="bitIcon-html"></i>&<i class="bitIcon-css"></i>
 				</div>
-				<div class="image_container_M">
-					<img src="http://i.imgur.com/0JgJmIjh.png" width="725" alt="Trivia Night Game">
+
+				<div class="skillOverlay">
+					<h2 class="skillItemTitel">HTML/CSS</h2>
+					<p class="">Authoritatively develop front-end e-business with top-line mindshare. Progressively predominate 2.0.</p>
 				</div>
 			</div>
+			<div class="skillItem">
+
+				<div class="fakeImage jquery">
+					<i class="devicon-javascript-plain"></i>
+				</div>
+				<div class="skillOverlay">
+					<h2 class="skillItemTitel">jQuery</h2>
+					<p class="skillItemIntro"></p>
+				</div>
+			</div>
+			<div class="skillItem">
+
+				<div class="fakeImage mongodb">
+					<i class="devicon-mongodb-plain"></i>
+				</div>
+				<div class="skillOverlay">
+					<h2 class="skillItemTitel">MongoDB</h2>
+					<p class="skillItemIntro">.</p>
+				</div>
+			</div>
+			<div class="skillItem">
+
+				<div class="fakeImage ruby">
+					<i class="devicon-ruby-plain"></i>
+				</div>
+				<div class="skillOverlay">
+					<h2 class="skillItemTitel">Ruby</h2>
+					<p class="skillItemIntro">.</p>
+				</div>
+			</div>
+			<div class="skillItem">
+
+				<div class="fakeImage rails">
+					<i class="devicon-rails-plain"></i>
+				</div>
+				<div class="skillOverlay">
+					<h2 class="skillItemTitel">Ruby on Rails</h2>
+					<p class="skillItemIntro">.</p>
+				</div>
+			</div>
+			<div class="skillItem">
+
+				<div class="fakeImage node">
+					<i class="devicon-nodejs-plain"></i>
+				</div>
+				<div class="skillOverlay">
+					<h2 class="skillItemTitel">NodeJS</h2>
+					<p class="skillItemIntro">.</p>
+				</div>
+			</div>
+			<div class="skillItem">
+
+				<div class="fakeImage angular">
+					<i class="devicon-angularjs-plain"></i>
+				</div>
+				<div class="skillOverlay">
+					<h2 class="skillItemTitel">AngularJS</h2>
+					<p class="skillItemIntro">.</p>
+				</div>
+			</div>
+			<div class="clear"></div>
 		</div>
-	</div>
+
+	</aside>
+</section>
+<!-- <div class="holder">
+<div id="to-work"></div>
+<div class="title scrollflow -slide-top -opacity">
+<h2>Resume</h2>
+</div>
+<div id="trivia" class="work_item">
+<div class="slide_container">
+<div class="portfolio_description">
+<h3> Project 1 - Trivia Night </h3>
+<div class="close_work"><div></div></div>
+<div class="prev_work" id="trivia_prev"><div></div></div>
+<div class="next_work" id="trivia_next"><div></div></div>
+</div>
+<div class="image_container_M">
+<img src="http://i.imgur.com/0JgJmIjh.png" width="725" alt="Trivia Night Game">
+</div>
+</div>
+</div>
+</div>
 </br>
 </section> -->
 
@@ -278,37 +279,37 @@
 							<button class='fade-in four'><a href="">Link to Node House</a></button>
 						</div>
 					</div>
-					<div class='graphic gallery_container'>
-						<div class='app-picture' id='app-picture5'>
+					<!-- <div class='graphic gallery_container'>
+					<div class='app-picture' id='app-picture5'>
 
-							<img src="images/1167.png" alt="WDI8 Yearbook">
-							<div class='app-pictureinfo' id='app-pictureinfo5' onclick=''>WDI8 Yearbook</div>
-						</div>
-						<div class='app-picturedet5' id='app-picturedet5' onclick=''>
-							<h3>WORDS</h3> WORDS .
-							<br><h3>WORDS</h3> WORDS?
-							<button class='button fade-in four'><a href="https://github.com/LaFrish/wdi8-yearbook">Github</a></button>
-							<button class='button fade-in four'><a href="wdi8-yearbook.herokuapp.com">Link to Yearbook</a></button>
-						</div>
-					</div>
-					<div class='graphic gallery_container'>
-						<div class='app-picture' id='app-picture6'>
-
-							<img src="images/1167.png" alt="">
-							<div class='app-pictureinfo' id='app-pictureinfo6' onclick=''></div>
-						</div>
-						<div class='app-picturedet6' id='app-picturedet6' onclick=''>
-							<h3>WORDS</h3> WORDS .
-							<br><h3>WORDS</h3> WORDS?
-							<button class='button fade-in four'><a href="">Github</a></button>
-							<button class='button fade-in four'><a href="">Link to </a></button>
-						</div>
-					</div>
-					<div class='clearfix'></div>
+					<img src="images/1167.png" alt="WDI8 Yearbook">
+					<div class='app-pictureinfo' id='app-pictureinfo5' onclick=''>WDI8 Yearbook</div>
 				</div>
+				<div class='app-picturedet5' id='app-picturedet5' onclick=''>
+				<h3>WORDS</h3> WORDS .
+				<br><h3>WORDS</h3> WORDS?
+				<button class='button fade-in four'><a href="https://github.com/LaFrish/wdi8-yearbook">Github</a></button>
+				<button class='button fade-in four'><a href="wdi8-yearbook.herokuapp.com">Link to Yearbook</a></button>
 			</div>
-		</div>
+		</div> -->
+		<!-- <div class='graphic gallery_container'>
+		<div class='app-picture' id='app-picture6'>
+
+		<img src="images/1167.png" alt="">
+		<div class='app-pictureinfo' id='app-pictureinfo6' onclick=''></div>
 	</div>
+	<div class='app-picturedet6' id='app-picturedet6' onclick=''>
+	<h3>WORDS</h3> WORDS .
+	<br><h3>WORDS</h3> WORDS?
+	<button class='button fade-in four'><a href="">Github</a></button>
+	<button class='button fade-in four'><a href="">Link to </a></button>
+</div>
+</div> -->
+<div class='clearfix'></div>
+</div>
+</div>
+</div>
+</div>
 
 </section>
 
