--- a/index.html
+++ b/index.html
@@ -74,23 +74,10 @@
 						<div class="wrapper">
 							<ul class="ch-grid">
 								<li>
-									<div class="ch-item html">
+									<div class="ch-item ch-img-html">
 										<div class="ch-info-wrap">
 											<div class="ch-info">
-												<div class="ch-info-front html"></div>
-												<div class="ch-info-back">
-													<h3>Bears Type</h3>
-													<p>by Josh Schott <a href="http://drbl.in/ewUW">View on Dribbble</a></p>
-												</div>
-											</div>
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="ch-item jquery">
-										<div class="ch-info-wrap">
-											<div class="ch-info">
-												<div class="ch-info-front jquery"></div>
+												<div class="ch-info-front bitIcon-html"></div>
 												<div class="ch-info-back">
 													<h3>Bears Type</h3>
 													<p>by Josh Schott <a href="http://drbl.in/ewUW">View on Dribbble</a></p>
@@ -113,6 +100,19 @@
 									</div>
 								</li>
 								<li>
+									<div class="ch-item ch-img-jquery">
+										<div class="ch-info-wrap">
+											<div class="ch-info">
+												<div class="ch-info-front jquery"></div>
+												<div class="ch-info-back">
+													<h3>Bears Type</h3>
+													<p>by Josh Schott <a href="http://drbl.in/ewUW">View on Dribbble</a></p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li>
 									<div class="ch-item ruby">
 										<div class="ch-info-wrap">
 											<div class="ch-info">
@@ -126,7 +126,7 @@
 									</div>
 								</li>
 								<li>
-									<div class="ch-item rails devicon-rails-plain">
+									<div class="ch-item rails rails">
 										<div class="ch-info-wrap">
 											<div class="ch-info">
 												<div class="ch-info-front rails devicon-rails-plain"></div>
@@ -139,7 +139,7 @@
 									</div>
 								</li>
 								<li>
-									<div class="ch-item ch-img-1">
+									<div class="ch-item angular">
 										<div class="ch-info-wrap">
 											<div class="ch-info">
 												<div class="ch-info-front ch-img-1"></div>
@@ -152,7 +152,7 @@
 									</div>
 								</li>
 								<li>
-									<div class="ch-item ch-img-1">
+									<div class="ch-item node">
 										<div class="ch-info-wrap">
 											<div class="ch-info">
 												<div class="ch-info-front ch-img-1"></div>
@@ -165,7 +165,7 @@
 									</div>
 								</li>
 								<li>
-									<div class="ch-item ch-img-1">
+									<div class="ch-item mongodb">
 										<div class="ch-info-wrap">
 											<div class="ch-info">
 												<div class="ch-info-front ch-img-1"></div>
@@ -178,7 +178,7 @@
 									</div>
 								</li>
 								<li>
-									<div class="ch-item ch-img-1">
+									<div class="ch-item postgresql">
 										<div class="ch-info-wrap">
 											<div class="ch-info">
 												<div class="ch-info-front ch-img-1"><img src="images/js.png"> </div>
@@ -191,7 +191,7 @@
 									</div>
 								</li>
 								<li>
-									<div class="ch-item ch-img-1">
+									<div class="ch-item mysql">
 										<div class="ch-info-wrap">
 											<div class="ch-info">
 												<div class="ch-info-front ch-img-1"></div>
@@ -204,7 +204,7 @@
 									</div>
 								</li>
 								<li>
-									<div class="ch-item ch-img-1">
+									<div class="ch-item illustrator">
 										<div class="ch-info-wrap">
 											<div class="ch-info">
 												<div class="ch-info-front ch-img-1"></div>
@@ -217,7 +217,7 @@
 									</div>
 								</li>
 								<li>
-									<div class="ch-item ch-img-1">
+									<div class="ch-item git">
 										<div class="ch-info-wrap">
 											<div class="ch-info">
 												<div class="ch-info-front ch-img-1"></div>
@@ -230,7 +230,7 @@
 									</div>
 								</li>
 								<li>
-									<div class="ch-item ch-img-1">
+									<div class="ch-item heroku">
 										<div class="ch-info-wrap">
 											<div class="ch-info">
 												<div class="ch-info-front ch-img-1"></div>
@@ -243,7 +243,7 @@
 									</div>
 								</li>
 								<li>
-									<div class="ch-item ch-img-1">
+									<div class="ch-item sass">
 										<div class="ch-info-wrap">
 											<div class="ch-info">
 												<div class="ch-info-front ch-img-1"></div>
@@ -256,7 +256,7 @@
 									</div>
 								</li>
 								<li>
-									<div class="ch-item ch-img-1">
+									<div class="ch-item photoshop">
 										<div class="ch-info-wrap">
 											<div class="ch-info">
 												<div class="ch-info-front ch-img-1"></div>
@@ -274,10 +274,11 @@
 
 <aside class="experience tab-content"  id="experience">
 	<div class="row">
-		<img src="images/montage.png"></img>
+		<img src="images/montage.png"></img></br>
 		<div class="brief">
-			<span class="company-name">Montage Marketing Group July 2015 – Current</span>
-			<span class="position">Marketing Consultant</span>
+			<!-- <span class="company-name">Montage Marketing Group</span> -->
+			</br>
+			<span class="position">Marketing Consultant, July 2015 – Current</span>
 			<li>Setup and monitor analytic dashboards and supporting programs.</li>
 			<li>Develop SEO strategies, implement and monitor campaigns.</li>
 			<li>Perform site analysis, keyword research, site mapping and assess link building opportunities.</li>
@@ -291,8 +292,9 @@
 	<div class="row">
 		<img src="images/geico-logo.jpg"></img>
 		<div class="brief">
-			<span class="company-name">GEICO</span>
-			<span class="position">Marketing Buyer – Events, October 2012 – February 2015</span>
+			<!-- <span class="company-name">GEICO</span>
+			</br> --></br>
+			<span class="position">Marketing Buyer – Events,   October 2012 – February 2015</span>
 			<li>Managed national event programs with our experiential marketing company. Activated 293 national events in 2013, 364 national events in 2014 with a 36% planned increase in 2015.</li>
 			<li>Developed and implemented strategic marketing plans for event marketing team.</li>
 			<li>Coordinated communication with all internal marketing sections to enhance events and programs.</li>
@@ -301,7 +303,8 @@
 			<li>Researched, planned and implemented new social media strategies to increase impressions of events and brand.</li>
 			<li>Member of the GEICO Blog team. Writing about events, marketing and topics that can be related to GEICO.</li>
 			<li>Continued Event Marketing Coordinator responsibilities, excluding regional event coordination, in addition to new duties.</li>
-			<span class="position">Marketing Coordinator – Events, September 2008 – October 2012</span></br>
+			</br>
+			<span class="position">Marketing Coordinator – Events, September 2008 – October 2012</span>
 			<li>Lead 20+ Regional Event Marketing Coordinators. Responsibilities included supporting teams with equipment, promotional products, event approval and event payment processing.</li>
 			<li>Created and maintained lead analysis program to measure ROI of events. The key learning from analysis were used in planning and evaluation of marketing strategies and programs.</li>
 			<li>Created and coordinated the email blast program to have a post-event reach with our consumers.</li>
@@ -323,7 +326,7 @@
 	<div class="row">
 		<img src="images/summitlogo.jpg"></img>
 		<div class="brief">
-			<span class="company-name">Summit Marketing</span>
+			<!-- <span class="company-name">Summit Marketing</span> --></br>
 			<span class="position">Program Accounts Manager, March 2004 – May 2007</span>
 			<li>Collaborated in a team of three to run Summit’s largest account, GEICO.</li>
 			<li>Managed 500+ items for GEICO’s two E-commerce stores, located in three different warehouses.</li>
