centered experience brief

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<span>social media.</span>
 		<span>PASSIONATE.</span>
 	</span></p>
-	<p><a href="#portfolio" class="button fade-in four">Welcome to me</a></p>
+	<p><a href="#resume" class="button fade-in four">Welcome to me</a></p>
 	<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
 	</div>
 </div>
@@ -258,7 +258,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 										</div>
 									</div>
 								</li>
-
 								<li>
 									<div class="ch-item git">
 										<h4>Git</h4>
@@ -366,9 +365,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								</li>
 							</ul>
 						</div>
+					</div>
 					</aside>
-
-
 					<aside class="experience tab-content"  id="experience">
 						<div class="row">
 							<img src="images/montage.png"></img></br>
